--- a/style guide/index.html
+++ b/style guide/index.html
@@ -61,11 +61,11 @@
     <h1>Card</h1>
     <div class="card">
         <ul>
-            <li class="card1"></li>
-            <li class="card2"></li>
-            <li class="card3"></li>
-            <li class="card4"></li>
-            <li class="card5"></li>
+            <input class="card1" placeholder="placeholder"></input>
+            <li class="card2">+ Subscribe</li>
+            <li class="card3">Subscribe</li>
+            <li class="card4">Sign up</li>
+            <li class="card4">Login</li>
         </ul>
     </div>
     <h1>View window</h1>
@@ -115,6 +115,60 @@
             <li class="box7"></li>
             <li class="box8"></li>
         </ul>
+    </div>
+    <h1>Form</h1>
+    <h2>Input</h2>
+    <div class="input">
+        <h3>Default input</h3>
+        <input class="input1" type="text" placeholder="text">
+        <input class="input2" type="date">
+        <input class="input3" type="password" placeholder="password">
+        <h3>Form lable</h3>
+        <label for="form-label">Example</label>
+        <input type="text" placeholder="text" class="form-label">
+        <label for="form-label">Example</label>
+        <input type="number" placeholder="number" class="form-label">
+        <label for="form-label">Example</label>
+        <input type="password" placeholder="password" class="form-label">
+        <h3>Form control</h3>
+        <input class="control"></input>
+    </div>
+    <h1>Button</h1>
+    <div class="button">
+        <h3>Default button</h3>
+        <button class="btn1">button</button>
+        <h3>Form button</h3>
+        <button class="btn2">button</button>
+    </div>
+    <h1>Hotdog</h1>
+    <div class="hotdog"><input type="text" placeholder="search" class="hotdog1">
+        <input type="text" placeholder="search" class="hotdog2">
+    </div>
+    <h1>Select</h1>
+    <div class="select"><label for="fruit">Choose a game:</label>
+        <select id="fruit" name="fruit">
+            <option value="apple">Granblue fantasy:Relink</option>
+            <option value="banana">Dark Souls</option>
+            <option value="blue">The bingding of issac</option>
+            <option value="grape">Elden Ring</option>
+        </select>
+    </div>
+    <h1>Check box</h1>
+    <div class="checkbox">
+        <h2>Basic checkbox</h2>
+        <input type="checkbox" class="checkbox1">
+        <label for="checkbox1">gameshow</label>
+        <h2>Toggle</h2>
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider"></span>
+        </label>
+
+        <!-- Rounded switch -->
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+        </label>
     </div>
 </body>
 
