--- a/style guide/index.html
+++ b/style guide/index.html
@@ -14,6 +14,7 @@
     <div class="outline">
         <h3>Font</h3>
         <h3>Color</h3>
+        <h3>Icon</h3>
         <h3>Paragraph</h3>
         <h3>Card</h3>
         <h3>View window</h3>
@@ -30,14 +31,14 @@
     </div>
     <h1>Color</h1>
     <div class="color">
-        <ul>
-            <li class="colorbox1"></li>
-            <li class="colorbox2"></li>
-            <li class="colorbox3"></li>
-        </ul>
+        <div class="colorbox1"></div>
+        <div class="colorbox2"></div>
+        <div class="colorbox3"></div>
     </div>
+    <h1>Icon</h1>
+    <div class="icon"></div>
     <h1>Paragraph</h1>
-    <div class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. A optio iste amet atque ab.
+    <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. A optio iste amet atque ab.
         Veritatis architecto, amet molestias magnam fuga, aut quae unde minima quas corrupti quis vitae, dolores labore
         eaque nobis tempore voluptate cum eligendi similique ab laboriosam eos doloremque aspernatur eum. Molestias
         cumque perspiciatis consectetur officiis totam. Perspiciatis earum animi sunt nihil, quas quae modi quis at,
@@ -57,15 +58,15 @@
         esse deserunt tempora, magnam rem aut vero voluptates corporis voluptatum libero quos saepe iusto nostrum quo
         cumque consequatur sunt illum minus et molestias? Quas consequatur debitis neque libero ipsam repudiandae labore
         reprehenderit, repellendus voluptates, quae veritatis temporibus dolorum qui? Possimus ipsa aperiam, commodi
-        itaque ullam, quam natus veniam voluptatem obcaecati nostrum quia molestiae?</div>
+        itaque ullam, quam natus veniam voluptatem obcaecati nostrum quia molestiae?</p>
     <h1>Card</h1>
     <div class="card">
         <ul>
             <input class="card1" placeholder="placeholder"></input>
-            <li class="card2">+ Subscribe</li>
-            <li class="card3">Subscribe</li>
-            <li class="card4">Sign up</li>
-            <li class="card4">Login</li>
+            <div class="card2">+ Subscribe</div>
+            <div class="card3">Subscribe</div>
+            <div class="card4">Sign up</div>
+            <div class="card4">Login</div>
         </ul>
     </div>
     <h1>View window</h1>
@@ -73,10 +74,10 @@
     <div class="nav1">
         <h3>Pill nav</h3>
         <ul>
-            <li><a href="#">link1</a></li>
-            <li><a href="#">link2</a></li>
-            <li><a href="#">link3</a></li>
-            <li><a href="#">link4</a></li>
+            <div><a href="#">link1</a></div>
+            <div><a href="#">link2</a></div>
+            <div><a href="#">link3</a></div>
+            <div><a href="#">link4</a></div>
         </ul>
     </div>
     <div class="nav2">
@@ -95,26 +96,23 @@
     <h2>Figure</h2>
     <h3>Basic Figure</h3>
     <div class="figure">
-        <ul>
-            <li class="box1"></li>
-            <li class="box2"></li>
-            <li class="box3"></li>
-            <li class="box4"></li>
-            <li class="box5"></li>
-        </ul>
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+        <div class="box5"></div>
     </div>
     <h3>Game layout</h3>
     <div class="gameshow">
-        <ul>
-            <li class="box1"></li>
-            <li class="box2"></li>
-            <li class="box3"></li>
-            <li class="box4"></li>
-            <li class="box5"></li>
-            <li class="box6"></li>
-            <li class="box7"></li>
-            <li class="box8"></li>
-        </ul>
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+        <div class="box5"></div>
+        <div class="box6"></div>
+        <div class="box7"></div>
+        <div class="box8"></div>
+
     </div>
     <h1>Form</h1>
     <h2>Input</h2>
