--- a/style guide/index.html
+++ b/style guide/index.html
@@ -96,11 +96,11 @@
     <h2>Figure</h2>
     <h3>Basic Figure</h3>
     <div class="figure">
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
-        <div class="box5"></div>
+        <div class="boxa"></div>
+        <div class="boxb"></div>
+        <div class="boxc"></div>
+        <div class="boxd"></div>
+        <div class="boxe"></div>
     </div>
     <h3>Game layout</h3>
     <div class="gameshow">
