--- a/My blog/html/about.html
+++ b/My blog/html/about.html
@@ -13,34 +13,33 @@
 </head>
 
 <body>
-    <div class="logo"></div>
-    <div class="nav">
-        <ul>
-            <li><a href="portfolio.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="../image/resume.pdf">Resume</a></li>
-        </ul>
+    <!-- navbar -->
+    <div class="navbar">
+        <div class="logo margin-left">
+            <img src="../image/logo.png" alt="logo-image" class="logo">
+        </div>
+        <div class="nav-links margin-top-nav">
+            <a href="portfolio.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="../image/resume.pdf" class="margin-right">Resume</a>
+        </div>
     </div>
+
     <div class="container margin-top">
-        <h1 class="prompt-black heading1">Hello ! 🙂</h1>
-        <h3>Hi ! I'm Soren Dai</h3>
-        <p>I am a graduate student majoring in UI UX design. I have rich professional knowledge. I love doing
-            various
-            web pages,
-            app interfaces, and user experience design. I have accumulated a lot of experience in the past five
-            years in
-            school and
-            personal projects. I hope I will also do it in the future. Ability to continuously learn and grow from
-            challenges and
-            make better designs.</p>
+        <h1>Hi!🙂
+            I'm a UI/UX
+            designer</h1>
+
 
         <div class="container card soft"><img src="../image/profile.jpg" alt="my profile"></div>
         <div class="margin-top card soft">
-            <a href="https://www.linkedin.com/in/soren-dai-544984292/">Linkedln page</a>
+            <h2>Contact me</h2>
+            <a href="https://dribbble.com/Surrealli">Dribbble page →</a><br>
+            <a href="https://www.linkedin.com/in/soren-dai-544984292/">Linkedln page →</a>
             <p>Phone: (+1)6286294801</p>
             <p>Email: d1226394303@gmail.com</p>
         </div>
-        <div class="margin-top card soft">
+        <div class="margin-top-little card soft">
             <h2>My skill</h2>
             <p>html,css</p>
             <p>Figma</p>
@@ -48,7 +47,18 @@
             <p>Photoshop</p>
             <p>illustrator</p>
         </div>
-
+        <div class="card soft margin-top-little">
+            <h2>About me</h2>
+            <p>I am a graduate student majoring in UI UX design. I have rich professional knowledge. I love doing
+                various
+                web pages,
+                app interfaces, and user experience design. I have accumulated a lot of experience in the past five
+                years in
+                school and
+                personal projects. I hope I will also do it in the future. Ability to continuously learn and grow from
+                challenges and
+                make better designs.</p>
+        </div>
     </div>
     </div>
 
