--- a/My blog/html/portfolio.html
+++ b/My blog/html/portfolio.html
@@ -10,16 +10,17 @@
 </head>
 
 <body>
-    <div>
-        <div class="nav">
-            <ul>
-                <li><a href="portfolio.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="../image/resume.pdf">Resume</a></li>
-            </ul>
+    <!-- navbar -->
+    <div class="navbar">
+        <div class="logo margin-left">
+            <img src="../image/logo.png" alt="logo-image" class="logo">
+        </div>
+        <div class="nav-links margin-top-nav">
+            <a href="portfolio.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="../image/resume.pdf" class="margin-right">Resume</a>
         </div>
     </div>
-
 
     <div class="container margin-top">
         <h1>Probe</h1>
