--- a/My blog/html/portfolio4.html
+++ b/My blog/html/portfolio4.html
@@ -10,24 +10,77 @@
 </head>
 
 <body>
-    <div>
-        <div class="nav">
-            <ul>
-                <li><a href="portfolio.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="../image/resume.pdf">Resume</a></li>
-            </ul>
+    <!-- nav-label -->
+    <div class="nav-tag">
+        <div><a href="#overview">Overview</a></div>
+        <div><a href="#wireframe">Wireframe</a></div>
+        <div><a href="#task-flow">Task Flow</a></div>
+        <div><a href="#homepage">Homepage</a></div>
+        <div><a href="#cart-page">Cart Page</a></div>
+        <div><a href="#product-page">Product page</a></div>
+    </div>
+    <!-- navbar -->
+    <div class="navbar">
+        <div class="logo margin-left">
+            <img src="../image/logo.png" alt="logo-image" class="logo">
+        </div>
+        <div class="nav-links margin-top-nav">
+            <a href="portfolio.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="../image/resume.pdf" class="margin-right">Resume</a>
         </div>
     </div>
+    <!--  -->
     <div class="container margin-top">
-        <h1>Overview</h1>
-        <p>I make game store website redesign project. Because I think that webiste have many inconvenient process in
-            user experience. And I'm a gamer, So I would like improving user experience and user interface about that
-            website.</p>
-        <div class="card">
-            <img src="../image/project4 banner.png" alt="project image" width="100%" height="100%">
+        <h1>Gamehub</h1>
+        <div class="line"></div>
+        <div class="margin-top-little"><span><img src="../image/icon1.png" alt="Icon" class="icon"> Website
+                Redesign</span>&nbsp;&nbsp;&nbsp;
+            <span><img src="../image/icon2.png" alt="Icon" class="icon"> Game store website</span>&nbsp;&nbsp;&nbsp;
+            <span><img src="../image/icon3.png" alt="Icon" class="icon"> Figma, Photoshop, illustrator</span>
+            <p>This project is website version of my first project, but I use design token system to make this website.
+            </p>
         </div>
-    </div>
+        <div class="margin-top">
+            <a name="overview">
+                <h1>Overview</h1>
+            </a>
+            <p>I make game store website redesign project. Because I think that webiste have many inconvenient process
+                in
+                user experience. And I'm a gamer, So I would like improving user experience and user interface about
+                that
+                website.</p>
+            <img src="../image/project4 banner.png" alt="project image" width="100%" height="100%">
+            <div class="margin-top-little">
+                <a name="wireframe">
+                    <h1>Wireframe</h1>
+                </a>
+                <div class="card soft">
+                    <img src="../image/project4 wireframe.png" alt="" width="100%" height="100%">
+                </div>
+                <a name="task-flow">
+                    <h1>Task Flow</h1>
+                </a>
+                <div class="card soft">
+                    <img src="../image/project4 taskflow.png" alt="" width="100%" height="100%">
+                </div>
+                <div class="margin-top-little">
+                    <a name="homepage">
+                        <h2>Homepage</h2>
+                    </a>
+                    <img src="../image/gamestore1.png" alt="gamestore-page" width="100%" height="100%">
+                    <a name="cart-page">
+                        <h2>Cart page</h2>
+                    </a>
+                    <img src="../image/gamestore2.png" alt="gamestore-page" width="100%" height="100%">
+                    <a name="product-page">
+                        <h2>Product page</h2>
+                    </a>
+                    <img src="../image/gamestore3.png" alt="gamestore-page" width="100%" height="100%">
+                </div>
+            </div>
+        </div>
+
 
 </body>
 
