--- a/My blog/html/portfolio1.html
+++ b/My blog/html/portfolio1.html
@@ -10,87 +10,165 @@
 </head>
 
 <body>
-    <div class="nav">
-        <ul>
-            <li><a href="portfolio.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="../image/resume.pdf">Resume</a></li>
-        </ul>
+    <!-- navbar -->
+    <div class="navbar">
+        <div class="logo margin-left">
+            <img src="../image/logo.png" alt="logo-image" class="logo">
+        </div>
+        <div class="nav-links margin-top-nav">
+            <a href="portfolio.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="../image/resume.pdf" class="margin-right">Resume</a>
+        </div>
     </div>
     <!-- navigation tag -->
     <div class="nav-tag">
-        <a href="#background">Background</a>
-        <a href="#research">Research</a>
-        <a href="#analyze">Analyze</a>
-        <a href="#sketch">Sketch</a>
-        <a href="#showing">Showing</a>
-        <a href="#animation">Animation</a>
+        <div><a href="#background">Background</a></div>
+        <div><a href="#research">Research</a></div>
+        <div><a href="#analyze">Analyze</a></div>
+        <div><a href="#test">Test</a></div>
+        <div><a href="#animation">Animation</a></div>
     </div>
-    <!-- logo and text -->
-    <div class="container">
-        <img src="../image/project1 logo.png" alt="portfolio-logo" class="logo">
-        <label for="logo">Probe</label>
-    </div>
+
     <!-- banner -->
-    <div class="banner">
+    <div class="banner margin-top">
         <img src="../image/project1 banner.png" alt="portfolio-image" width="100%" height="100%">
     </div>
-    <div class="container margin-top">
-        <!-- questionnair -->
-        <a name="background">
+    <div class="container">
+        <h1>Probe App</h1>
+        <div class="line"></div>
+        <div class="margin-top-little"><span><img src="../image/icon1.png" alt="Icon" class="icon"> App
+                design</span>&nbsp;&nbsp;&nbsp;
+            <span><img src="../image/icon2.png" alt="Icon" class="icon"> Designer
+                platform</span>&nbsp;&nbsp;&nbsp;
+            <span><img src="../image/icon3.png" alt="Icon" class="icon"> Figma, Photoshop, Protopie</span>
+            <p>This project is website version of my first project, but I use design token system to make this website.
+            </p>
+        </div>
+        <div class="container margin-top">
+            <!-- problem -->
+            <a name="background">
+                <h1 class="margin-top">Background Research</h1>
+            </a>
+            <div class="center card soft"><img src="../image/project1 inspiration.png" alt=""></div>
+            <h1 class="margin-top-little">Inspiration</h1>
+            <p>Many product design students at the university struggle to find users to interview for their research
+                and to test their
+                products for feedback. To address this issue, I want to create a platform that connects students
+                with users, making it
+                easier to gather valuable information and insights.</p>
+            <div class="center card soft"><img src="../image/project1 chanllenge.jpg" alt=""></div>
+            <h1 class="margin-top-little">Challenge</h1>
+            <p>Many product design students at the university struggle to find users to interview for their research
+                and to test their
+                products for feedback. To address this issue, I want to create a platform that connects students
+                with users, making it
+                easier to gather valuable information and insights.</p>
+
+            <!-- questionnair -->
+            <a name="research">
+                <h1 class="margin-top">User Research</h1>
+            </a>
             <p>In order to better understand the designer <span class="main-color font-bold">pain points</span> in
                 design
-                <br>
                 process, I
                 started to make
                 research about
                 that.
             </p>
+
+
+
+            <div class="margin-top-little">
+                <h2 class="prompt-semibold">Qustionnair</h2>
+                <img src="../image/portfolio6.png" alt="portfolio-image" width="100%" height="100%">
+            </div>
+            <div class="margin-top-little">
+                <h2 class="prompt-semibold">User Interview</h2>
+                <img src="../image/portfolio7.png" alt="portfolio-image" width="100%" height="100%">
+            </div>
+            <div class="margin-top">
+                <a name="analyze">
+                    <h1>Insights</h1>
+                </a>
+                <p>1. Designers find it <span class="main-color font-bold">difficult to locate target users</span> to
+                    interview.
+                </p>
+                <p>2. Students <span class="main-color font-bold">cannot find users</span> to test their products, get
+                    feedback, and improve their design.</p>
+                <p>3. People want a <span class="main-color font-bold">quiet space</span> to communicate with users,
+                    conduct interviews, and get feedback.</p>
+                <p>4. Many designers don't know <span class="main-color font-bold">how to ask questions</span>, which
+                    can make them seem like strangers.</p>
+                <p>5. Designers think <span class="main-color font-bold">asking strangers is an inefficient idea</span>,
+                    so they want a straightforward way to
+                    find target users.
+                </p>
+            </div>
+            <div class="margin-top">
+                <p>According to these research, I make design analysis.</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="card soft">
+                <img src="../image/portfolio9.png" alt="portfolio-image" width="100%" height="100%">
+            </div>
+            <div class="card soft">
+                <img src="../image/portfolio10.png" alt="portfolio-image" width="100%" height="100%">
+            </div>
+        </div>
+        <!-- app wireframe -->
+        <div class="light-background">
+            <div class="container margin-top">
+                <img src="../image/portfolio11.png" alt="portfolio-image" width="100%" height="100%">
+                <img src="../image/portfolio12.png" alt="portfolio-image" width="100%" height="100%">
+                <img src="../image/portfolio13.png" alt="portfolio-image" width="100%" height="100%">
+            </div>
+        </div>
+        <a name="test">
+            <div class="container margin-top"><img src="../image/portfolio14.png" alt="portfolio-image" width="100%"
+                    height="100%">
         </a>
-
-        <div class="card soft">
-            <img src="../image/portfolio6.png" alt="portfolio-image" width="100%" height="100%">
-        </div>
-        <div class="card soft margin-top">
-            <img src="../image/portfolio7.png" alt="portfolio-image" width="100%" height="100%">
-        </div>
-        <div class="margin-top">
-            <h1>Insights</h1>
-            <p>1. Designers are difficult find people to interview.
-            </p>
-            <p>2. Students cannot find users test their products to get feedback and improve their design.</p>
-            <p>3. People wants a quiet space to communicate with users to interview and get feedback.</p>
-            <p>4. Many designers didn’t know how to ask question, it may let them if they are stranger.</p>
-            <p>5. Designers think ask strangers is bad efficient idea, so they want a straight way to find target users.
-            </p>
-        </div>
-        <div class="margin-top">
-            <p>According to these research, I make design analysis.</p>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="card soft">
-            <img src="../image/portfolio9.png" alt="portfolio-image" width="100%" height="100%">
-        </div>
-        <div class="card soft margin-top">
-            <img src="../image/portfolio10.png" alt="portfolio-image" width="100%" height="100%">
-        </div>
-    </div>
-    <!-- app wireframe -->
-    <div class="container margin-top">
-        <img src="../image/portfolio11.png" alt="portfolio-image" width="100%" height="100%">
-        <img src="../image/portfolio12.png" alt="portfolio-image" width="100%" height="100%">
-        <img src="../image/portfolio13.png" alt="portfolio-image" width="100%" height="100%">
-        <img src="../image/portfolio14.png" alt="portfolio-image" width="100%" height="100%">
+        <h1>Modify Interface</h1>
+        <p>The issues of my App interface are I have some unnecessary elements and fliter page are useless, and also
+            some logical
+            problems in all task flow.</p>
         <img src="../image/portfolio15.png" alt="portfolio-image" width="100%" height="100%">
         <img src="../image/portfolio18.png" alt="portfolio-image" width="100%" height="100%">
     </div>
     <!-- app showing -->
     <div class="container">
-        <img src="../image/portfolio16.png" alt="portfolio-image" width="100%" height="100%">
         <img src="../image/portfolio17.png" alt="portfolio-image" width="100%" height="100%">
-        <img src="../image/portfolio19.png" alt="portfolio-image" width="100%" height="100%">
+    </div>
+    <!-- animation -->
+    <div class="container">
+        <a name="animation">
+            <h1>Prototype</h1>
+        </a>
+        <div class="margin-top-little">
+            <h2>Reserve meeting</h2>
+            <p>Designers can reserve meetings with your users on this platform, change the time on a schedule, and
+                check
+                meetings and
+                appointments on your profile appointment page.</p>
+            <img src="" alt="">
+        </div>
+        <div class="margin-top-little">
+            <h2>Find User to interview</h2>
+            <p>You can find target users with this function. You can set tags, create a user profile that meets your
+                needs, and get
+                their contact information.</p>
+            <img src="" alt="">
+        </div>
+        <div class="margin-top-little">
+            <h2>Browse Community</h2>
+            <p>You can browse the community on this app, where you can learn from the experiences and databases
+                created by other
+                designers and users.</p>
+            <img src="" alt="">
+        </div>
+
     </div>
 
 
