--- a/My blog/html/portfolio2.html
+++ b/My blog/html/portfolio2.html
@@ -10,26 +10,39 @@
 </head>
 
 <body>
-    <div class="nav">
-        <ul>
-            <li><a href="portfolio.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="../image/resume.pdf">Resume</a></li>
-        </ul>
+    <!-- navbar -->
+    <div class="navbar">
+        <div class="logo margin-left">
+            <img src="../image/logo.png" alt="logo-image" class="logo">
+        </div>
+        <div class="nav-links margin-top-nav">
+            <a href="portfolio.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="../image/resume.pdf" class="margin-right">Resume</a>
+        </div>
     </div>
     <!-- banner -->
     <div class="banner">
         <img src="../image/project2 banner.jpg" alt="portfolio-image" width="100%" height="100%">
     </div>
-    <!-- design process -->
-    <div class="container margin-top">
-        <h1>Design process</h1>
-        <img src="../image/portfolio25.png" alt="portfolio-image" width="100%" height="100%">
-    </div>
+    <!-- introduction of project -->
     <div class="container">
-        <div class="card soft">
-
-
+        <h1>LinkHub</h1>
+        <div class="line"></div>
+        <div class="margin-top-little"><span><img src="../image/icon1.png" alt="Icon" class="icon"> App
+                Design</span>&nbsp;&nbsp;&nbsp;
+            <span><img src="../image/icon2.png" alt="Icon" class="icon"> Community App</span>&nbsp;&nbsp;&nbsp;
+            <span><img src="../image/icon3.png" alt="Icon" class="icon"> Figma, Photoshop, After Effects</span>
+            <p>This project is website version of my first project, but I use design token system to make this website.
+            </p>
+        </div>
+        <!-- design process -->
+        <div class="container margin-top">
+            <h1>Design process</h1>
+            <img src="../image/portfolio25.png" alt="portfolio-image" width="100%" height="100%">
+        </div>
+        <div class="container">
+            <h1>Background</h1>
             <img src="../image/portfolio26.png" alt="portfolio-image" width="100%" height="100%">
             <img src="../image/portfolio27.png" alt="portfolio-image" width="100%" height="100%">
             <img src="../image/portfolio28.png" alt="portfolio-image" width="100%" height="100%">
@@ -39,8 +52,8 @@
             <img src="../image/portfolio32.png" alt="portfolio-image" width="100%" height="100%">
             <img src="../image/portfolio33.png" alt="portfolio-image" width="100%" height="100%">
             <img src="../image/portfolio34.png" alt="portfolio-image" width="100%" height="100%">
+
         </div>
-    </div>
 </body>
 
 </html>
