--- a/My blog/html/portfolio3.html
+++ b/My blog/html/portfolio3.html
@@ -2,33 +2,108 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project3</title>
-    <link rel="stylesheet" href="../css/portfolio3.css">
-    <link rel="stylesheet" href="../css/styleguide.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Project3</title>
+        <link rel="stylesheet" href="../css/portfolio3.css">
+        <link rel="stylesheet" href="../css/styleguide.css">
 </head>
 
 <body>
-    <div class="nav">
-        <ul>
-            <li><a href="portfolio.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="../image/resume.pdf">Resume</a></li>
-        </ul>
-    </div>
-    <div class="container">
-        <div class="card soft">
-            <img src="../image/portfolio35.png" alt="portfolio-image" width="100%" height="100%">
-            <img src="../image/portfolio36.png" alt="portfolio-image" width="100%" height="100%">
-            <img src="../image/portfolio37.png" alt="portfolio-image" width="100%" height="100%">
-            <img src="../image/portfolio38.png" alt="portfolio-image" width="100%" height="100%">
-            <img src="../image/portfolio39.png" alt="portfolio-image" width="100%" height="100%">
-            <img src="../image/portfolio40.png" alt="portfolio-image" width="100%" height="100%">
-            <img src="../image/portfolio41.png" alt="portfolio-image" width="100%" height="100%">
-            <img src="../image/portfolio42.png" alt="portfolio-image" width="100%" height="100%">
+        <!-- nav-label -->
+        <div class="nav-tag">
+                <div><a href="#light-mode">Light mode</a></div>
+                <div><a href="#dark-mode">Dark mode</a></div>
+                <div><a href="#animation">Animation showing</a></div>
         </div>
-    </div>
+        <!-- navbar -->
+        <div class="navbar">
+                <div class="logo margin-left">
+                        <img src="../image/logo.png" alt="logo-image" class="logo">
+                </div>
+                <div class="nav-links margin-top-nav">
+                        <a href="portfolio.html">Projects</a>
+                        <a href="about.html">About</a>
+                        <a href="../image/resume.pdf" class="margin-right">Resume</a>
+                </div>
+        </div>
+        <!-- banner-->
+        <div class="banner">
+                <img src="../image/project2 banner.jpg" alt="portfolio-image" width="100%" height="100%">
+        </div>
+        <div class="container margin-top">
+                <!-- introduction of project -->
+                <h1>Probe Website</h1>
+                <div class="line"></div>
+                <div class="margin-top-little"><span><img src="../image/icon1.png" alt="Icon" class="icon"> Website
+                                design</span>&nbsp;&nbsp;&nbsp;
+                        <span><img src="../image/icon2.png" alt="Icon" class="icon"> Designer
+                                platform</span>&nbsp;&nbsp;&nbsp;
+                        <span><img src="../image/icon3.png" alt="Icon" class="icon"> Figma, Photoshop, After
+                                Effects</span>
+                        <p>This project is website version of my first project, but I use design token system to make
+                                this website.
+                        </p>
+                        <div class="container">
+                                <a name="light-mode">
+                                        <h1 class="margin-top">Webiste light mode</h1>
+                                </a>
+                                <div class="card soft margin-top-little">
+                                        <img src="../image/portfolio36.png" alt="portfolio-image" width="100%"
+                                                height="100%">
+                                </div>
+                        </div>
+                        <div class="margin-top-little card soft"><img src="../image/portfolio37.png"
+                                        alt="portfolio-image" width="100%" height="100%">
+                        </div>
+                        <div class="margin-top-little card soft"><img src="../image/portfolio38.png"
+                                        alt="portfolio-image" width="100%" height="100%">
+                        </div>
+                        <div class="margin-top-little card soft"><img src="../image/portfolio39.png"
+                                        alt="portfolio-image" width="100%" height="100%">
+                        </div>
+                        <div class="margin-top-little card soft"><img src="../image/portfolio40.png"
+                                        alt="portfolio-image" width="100%" height="100%">
+                        </div>
+                        <div class="margin-top-little card soft"><img src="../image/portfolio41.png"
+                                        alt="portfolio-image" width="100%" height="100%">
+                        </div>
+                        <div class="margin-top-little card soft"><img src="../image/portfolio42.png"
+                                        alt="portfolio-image" width="100%" height="100%">
+                        </div>
+                        <a name="dark-mode">
+                                <h1 class="margin-top">Webiste Dark mode</h1>
+                        </a>
+                        <div class="card soft margin-top-little">
+                                <img src="../image/project3 work8.png" alt="portfolio-image" width="100%" height="100%">
+                        </div>
+                </div>
+                <div class="margin-top-little card soft"><img src="../image/project3 work9.png" alt="portfolio-image"
+                                width="100%" height="100%">
+                </div>
+                <div class="margin-top-little card soft"><img src="../image/project3 work10.png" alt="portfolio-image"
+                                width="100%" height="100%">
+                </div>
+                <div class="margin-top-little card soft"><img src="../image/project3 work11.png" alt="portfolio-image"
+                                width="100%" height="100%">
+                </div>
+                <div class="margin-top-little card soft"><img src="../image/project3 work12.png" alt="portfolio-image"
+                                width="100%" height="100%">
+                </div>
+                <div class="margin-top-little card soft"><img src="../image/project3 work13.png" alt="portfolio-image"
+                                width="100%" height="100%">
+                </div>
+                <div class="margin-top-little card soft"><img src="../image/project3 work14.png" alt="portfolio-image"
+                                width="100%" height="100%">
+                </div>
+                <a name="animation">
+                        <h1>Design token showing</h1>
+                </a>
+                <div class="margin-top-little card soft"><img src="../image/project3 work14.png" alt="portfolio-image"
+                                width="100%" height="100%">
+                </div>
+        </div>
+        </div>
 </body>
 
 </html>
